fix overlapping text and banner position on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -2589,7 +2589,8 @@ body.mobile-nav-active #mobile-nav-toggle {
   opacity: .5;
 }
 
-.rsvp-area {
+.rsvp-area p{
+  line-height: 36px;
 }
 
 .events-area {
